Transferring the body to GET for cost calculation instead of POST
